feat: add localization for section counter and fix sidebar background colors
- Add localized section counter (Section X of Y) in 5 languages
- Fix sidebar background colors using CSS variables from globals.css
- Replace hardcoded stone colors with bg-sidebar class
- Add custom .bg-sidebar CSS class for proper color application
- Update all sidebar components to use centralized CSS variables

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,4 +1,8 @@
 {
+  "project": {
+    "name": "Probo",
+    "description": "Kommerzieller Angebotsgenerator"
+  },
   "common": {
     "search": "Suchen",
     "searchPlaceholder": "Tippen zum Suchen...",
@@ -28,7 +32,8 @@
     "verifying": "Überprüfung...",
     "theme": "Design",
     "light": "Hell",
-    "dark": "Dunkel"
+    "dark": "Dunkel",
+    "sectionOf": "Abschnitt {current} von {total}"
   },
   "navigation": {
     "tableOfContents": "Inhaltsverzeichnis",
