Fix Mermaid diagram styling: add rounded corners and improve active state
- Add rounded-lg to mermaid-diagram-container base styles
- Add rounded-xl to active state for enhanced visual feedback
- Fix border styling for active state without increasing thickness
- Resolve CSS syntax errors and improve hover effects
- Update table whitespace in MDX content to fix hydration errors

--- a/content/1.mdx
+++ b/content/1.mdx
@@ -184,43 +184,7 @@ export default UserCard;
 
 ### Table Shadcn UI
 
-<tableui>
-  <tablecaptionui>A list of your recent invoices.</tablecaptionui>
-  <tableheaderui>
-    <tablerowui>
-      <tableheadui className="w-[100px]">Invoice</tableheadui>
-      <tableheadui>Status</tableheadui>
-      <tableheadui>Method</tableheadui>
-      <tableheadui className="text-right">Amount</tableheadui>
-    </tablerowui>
-  </tableheaderui>
-  <tablebodyui>
-    <tablerowui>
-      <tablecellui className="font-medium">INV001</tablecellui>
-      <tablecellui>Paid</tablecellui>
-      <tablecellui>Credit Card</tablecellui>
-      <tablecellui className="text-right">$250.00</tablecellui>
-    </tablerowui>
-    <tablerowui>
-      <tablecellui className="font-medium">INV002</tablecellui>
-      <tablecellui>Pending</tablecellui>
-      <tablecellui>PayPal</tablecellui>
-      <tablecellui className="text-right">$150.00</tablecellui>
-    </tablerowui>
-    <tablerowui>
-      <tablecellui className="font-medium">INV003</tablecellui>
-      <tablecellui>Unpaid</tablecellui>
-      <tablecellui>Bank Transfer</tablecellui>
-      <tablecellui className="text-right">$350.00</tablecellui>
-    </tablerowui>
-  </tablebodyui>
-  <tablefooterui>
-    <tablerowui>
-      <tablecellui colSpan={3}>Total</tablecellui>
-      <tablecellui className="text-right">$2,500.00</tablecellui>
-    </tablerowui>
-  </tablefooterui>
-</tableui>
+<tableui><tablecaptionui>A list of your recent invoices.</tablecaptionui><tableheaderui><tablerowui><tableheadui className="w-[100px]">Invoice</tableheadui><tableheadui>Status</tableheadui><tableheadui>Method</tableheadui><tableheadui className="text-right">Amount</tableheadui></tablerowui></tableheaderui><tablebodyui><tablerowui><tablecellui className="font-medium">INV001</tablecellui><tablecellui>Paid</tablecellui><tablecellui>Credit Card</tablecellui><tablecellui className="text-right">$250.00</tablecellui></tablerowui><tablerowui><tablecellui className="font-medium">INV002</tablecellui><tablecellui>Pending</tablecellui><tablecellui>PayPal</tablecellui><tablecellui className="text-right">$150.00</tablecellui></tablerowui><tablerowui><tablecellui className="font-medium">INV003</tablecellui><tablecellui>Unpaid</tablecellui><tablecellui>Bank Transfer</tablecellui><tablecellui className="text-right">$350.00</tablecellui></tablerowui></tablebodyui><tablefooterui><tablerowui><tablecellui colSpan={3}>Total</tablecellui><tablecellui className="text-right">$2,500.00</tablecellui></tablerowui></tablefooterui></tableui>
 
 ### Links
 
