Add missing translations and fix TOC button styles
- Add common.indexingContent, common.forward, common.sectionNavigation translations for all languages
- Fix TOC button styles: active button now has normal appearance, inactive has muted appearance
- Update language files: en, ru, es, fr, de, zh, ja, ko, pt, it, ar, hi

--- a/content/1.mdx
+++ b/content/1.mdx
@@ -2,10 +2,10 @@
 title: "MDX Styling Examples"
 description: "Complete examples of all MDX content styles and formatting"
 slug: "demo"
-icon: "FileText"
+icon: "Code"
 prevButtonText: "Back"
 nextButtonText: "Forward"
-locked: true
+locked: false
 ---
 
 # MDX Content Styling Examples
