--- a/content/2.mdx
+++ b/content/2.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Group 1 - Section A"
 description: "First section in group 1"
-icon: "FileText"
+slug: "group-1-section-a"
+icon: "Users"
 prevButtonText: "Back"
 nextButtonText: "Forward"
 locked: true
-slug: "group-1-section-a"
 ---
 
 # Group 1 - Section A
