--- a/content/4.mdx
+++ b/content/4.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Group 2 - Section D"
 description: "First section in group 2"
-icon: "FileText"
+slug: "group-2-section-d"
+icon: "Cpu"
 prevButtonText: "Back"
 nextButtonText: "Forward"
 locked: true
-slug: "group-2-section-d"
 ---
 
 # Group 2 - Section D
