Add language switcher and theme toggle to components header

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -33,7 +33,8 @@
     "light": "Light",
     "dark": "Dark",
     "sectionOf": "Section {current} of {total}",
-    "tableOfContents": "Table of Contents"
+    "tableOfContents": "Table of Contents",
+    "noHeadings": "No headings"
   },
   "navigation": {
     "tableOfContents": "Table of Contents",
