--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -46,6 +46,92 @@
     "group1SectionA": "Группа 1 - Раздел A",
     "group2SectionD": "Группа 2 - Раздел D"
   },
+  "components": {
+    "title": "UI Библиотека Компонентов",
+    "accordion": {
+      "title": "Accordion",
+      "description": "Вертикально сложенный набор интерактивных заголовков, каждый из которых раскрывает раздел контента."
+    },
+    "basic": {
+      "title": "Базовые Компоненты",
+      "description": "Основные UI компоненты для уведомлений, диалогов, аватаров, значков и кнопок."
+    },
+    "layout": {
+      "title": "Макет и Утилиты",
+      "description": "Компоненты макета, примеры кода и утилитарные компоненты для демонстраций."
+    },
+    "count": "компонентов",
+    "variants": "Варианты:",
+    "more": "еще",
+    "howToUse": {
+      "title": "Как использовать",
+      "description": "Выберите категорию компонентов выше, чтобы просмотреть все доступные варианты, примеры кода и интерактивные демонстрации. Каждый компонент включает подробную документацию и примеры использования."
+    }
+  },
+  "accordion": {
+    "title": "Компоненты Accordion",
+    "description": "Интерактивные компоненты аккордеона с различными стилями и конфигурациями",
+    "variants": {
+      "default": {
+        "title": "Стандартный Accordion",
+        "description": "Стандартный аккордеон с базовым стилем и функциональностью."
+      },
+      "outline": {
+        "title": "Accordion с обводкой",
+        "description": "Аккордеон с стилем обводки для лучшего визуального разделения."
+      },
+      "box": {
+        "title": "Box Accordion",
+        "description": "Аккордеон с контейнерами в стиле коробок для каждого элемента."
+      },
+      "boxContained": {
+        "title": "Box Contained",
+        "description": "Box аккордеон с ограниченным стилем и скругленными углами."
+      },
+      "tabs": {
+        "title": "Tabs Accordion",
+        "description": "Аккордеон, стилизованный под вкладки с горизонтальной компоновкой."
+      },
+      "customTrigger": {
+        "title": "Пользовательский триггер",
+        "description": "Аккордеон с пользовательскими элементами триггера и стилизацией."
+      },
+      "disabled": {
+        "title": "Отключенное состояние",
+        "description": "Аккордеон с отключенными элементами и правильной доступностью."
+      },
+      "highlightActive": {
+        "title": "Выделение активного",
+        "description": "Аккордеон, который выделяет текущий активный элемент."
+      },
+      "mediaContent": {
+        "title": "Медиа контент",
+        "description": "Аккордеон с богатым медиа контентом, таким как изображения и видео."
+      }
+    },
+    "demo": {
+      "title": "Интерактивная демонстрация",
+      "description": "Попробуйте компонент аккордеона ниже. Нажмите на любой элемент, чтобы развернуть или свернуть его.",
+      "items": {
+        "accessible": {
+          "title": "Доступен ли он?",
+          "content": "Да. Он соответствует паттерну дизайна WAI-ARIA."
+        },
+        "styled": {
+          "title": "Стилизован ли он?",
+          "content": "Да. Он поставляется со стилями по умолчанию, которые соответствуют эстетике других компонентов."
+        },
+        "animated": {
+          "title": "Анимирован ли он?",
+          "content": "Да. Он анимирован по умолчанию, но вы можете отключить анимацию, если предпочитаете."
+        }
+      }
+    },
+    "usage": {
+      "title": "Использование",
+      "description": "Нажмите на любой вариант выше, чтобы увидеть интерактивные демонстрации, примеры кода и подробную документацию по использованию компонента."
+    }
+  },
   "auth": {
     "protectedContent": "Защищенный контент",
     "passwordProtected": "Этот контент защищен паролем. Пожалуйста, введите пароль для продолжения.",
@@ -78,5 +164,65 @@
   },
   "tariff": {
     "popular": "Популярный"
+  },
+  "basic": {
+    "title": "Базовые Компоненты",
+    "description": "Основные UI компоненты для уведомлений, диалогов, аватаров, значков и кнопок.",
+    "components": {
+      "alert": {
+        "title": "Уведомление",
+        "description": "Отображает предупреждение для привлечения внимания пользователя с различными вариантами и стилями."
+      },
+      "alertDialog": {
+        "title": "Диалог Уведомления",
+        "description": "Модальное диалоговое окно, которое прерывает пользователя важным контентом и ожидает ответа."
+      },
+      "avatar": {
+        "title": "Аватар",
+        "description": "Элемент изображения с резервным вариантом для представления пользователя."
+      },
+      "badge": {
+        "title": "Значок",
+        "description": "Отображает значок или компонент, который выглядит как значок."
+      },
+      "button": {
+        "title": "Кнопка",
+        "description": "Отображает кнопку или компонент, который выглядит как кнопка с различными стилями."
+      }
+    },
+    "info": {
+      "title": "Базовые Компоненты",
+      "description": "Основные UI компоненты, которые формируют основу современных веб-интерфейсов. Каждый компонент разработан для доступности, настройки и простоты использования."
+    }
+  },
+  "layout": {
+    "title": "Макет и Утилиты",
+    "description": "Компоненты макета, примеры кода и утилитарные компоненты для демонстраций.",
+    "components": {
+      "componentLayout": {
+        "title": "Макет Компонента",
+        "description": "Обертка макета для организации и отображения демонстраций компонентов."
+      },
+      "demoGrid": {
+        "title": "Сетка Демо",
+        "description": "Сетка макета для организации множественных демонстраций компонентов."
+      },
+      "codeExample": {
+        "title": "Пример Кода",
+        "description": "Компонент для отображения примеров кода с подсветкой синтаксиса."
+      },
+      "inlineCodeExample": {
+        "title": "Встроенный Пример Кода",
+        "description": "Компонент для отображения встроенного кода для небольших фрагментов кода."
+      },
+      "variantDemo": {
+        "title": "Демо Вариантов",
+        "description": "Компонент для демонстрации различных вариантов UI элементов."
+      }
+    },
+    "info": {
+      "title": "Макет и Утилиты",
+      "description": "Компоненты макета и утилиты, которые помогают организовать и структурировать интерфейс вашего приложения. Эти компоненты обеспечивают гибкие и адаптивные макеты для различных случаев использования."
+    }
   }
 }
